--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -566,7 +566,7 @@
 @media (max-width: 768px) {
   .about-page {
     width: 90%;
-    padding: 40px 0 100px;
+    padding: 100px 0 100px;
   }
 
   .about-name {
